syntax = "proto3";

package weed.remote;

option go_package = "github.com/seaweedfs/seaweedfs/weed/rpc";

message RemoteConfiguration {
  string type = 1;
  string name = 2;
  string s3_access_key = 3;
  string s3_secret_key = 4;
  string s3_region = 5;
  string s3_endpoint = 6;
  string s3_storage_class = 7;
  bool s3_force_path_style = 8;
  bool s3_v4_signature = 9;
}

message RemoteStorageMapping {
  map<string,RemoteStorageLocation> mappings = 1;
  string primary_bucket_storage_name = 2;
}

message RemoteStorageLocation {
  string name = 1;
  string bucket = 2;
  string path = 3;
}
